<resources>
    <string name="app_name">TennisScoreTracker</string>
    <string name="action_settings">Settings</string>
    <string name="home_button_NEW_MATCH">New Match</string>
    <string name="home_button_PLAYER_RECORDS">Player Records</string>
    <string name="home_button_QUIT">Quit</string>
    <string name="title_activity_player_records">PlayerRecordsActivity</string>
    <string name="player_records_button_NEW_PLAYER">ADD NEW PLAYER</string>
    <string name="new_player_PLAYER_NAME_TEXTVIEW">FULL NAME</string>
    <string name="new_player_NAME_HINT">Enter Name Here</string>
    <string name="new_player_CREATE_PLAYER_TITLE">CREATE NEW PLAYER</string>
    <string name="new_player_ADD_PLAYER_BUTTON">ADD PLAYER</string>
    <string name="player_profile_PLAYER_PROFILE_HEADING_TEXTVIEW">PLAYER PROFILE</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="player_profile_PLACEHOLDER_HEADING">Placeholder for Heading</string>
    <string name="player_profile_PLACEHOLDER_DISPLAY">Display Placeholder</string>
    <string name="player_profile_PLAYER_NAME_HEADING_TEXTVIEW">PLAYER NAME</string>
    <string name="player_profile_PLAYER_NAME_DISPLAY_TEXTVIEW">PLACEHOLDER_NAME</string>
    <string name="player_profile_PLAYER_WINS_HEADING_TEXTVIEW">WINS</string>
    <string name="player_profile_PLAYER_WINS_DISPLAY_TEXTVIEW">PLACEHOLDER WINS</string>
    <string name="player_profile_PLAYER_LOSSES_HEADING_TEXTVIEW">LOSSES</string>
    <string name="player_profile_PLAYER_LOSSES_DISPLAY_TEXTVIEW">PLACEHOLDER LOSSES</string>
    <string name="player_profile_DELETE_PLAYER_BUTTON">Delete Player</string>
    <string name="player_profile_CHANGE_PLAYER_NAME_BUTTON">Change Player Name</string>
    <string name="dialog_update_player_name_CHANGE_NAME_TEXTVIEW">Change Player Name</string>
    <string name="dialog_update_player_name_HINT">New Name</string>
    <string name="dialog_update_player_name_CANCEL_BUTTON">Cancel</string>
    <string name="dialog_update_player_name_UPDATE_BUTTON">Update</string>
    <string name="dialog_delete_player_DELETE_TEXTVIEW">Delete This Player?</string>
    <string name="dialog_delete_player_CANCEL_BUTTON">Cancel</string>
    <string name="dialog_delete_player_DELETE_BUTTON">Delete</string>
    <string name="dialog_delete_player_WARNING_TEXTVIEW">All Player Data Will Be Erased!</string>
    <string name="player_records_VIEW_PLAYER_RECORDS_TEXTVIEW">PLAYERS</string>
    <string name="match_select_type_SELECT_TEXTVIEW">Select Match Type</string>
    <string name="match_select_type_SINGLES_BUTTON">Singles (1 v 1)</string>
    <string name="match_select_type_DOUBLES_BUTTON">Doubles (2 v 2)</string>
    <string name="match_player_select_HEADING_TEXTVIEW">Match Setup</string>
    <string name="fragment_singles_setup_Player_1_TEXTVIEW">Player 1:</string>
    <string name="fragment_singles_setup_Player_2_TEXTVIEW">Player 2:</string>
    <string name="fragment_singles_setup_Team_Name_TEXTVIEW">Team PlaceHolder</string>
    <string name="fragment_number_of_sets_TEXT">Number of Sets:</string>
    <string name="activity_match_player_select_BUTTON_BEGIN_MATCH">Begin Match</string>
    <string name="fragment_player_action_ADD_POINT_BUTTON">Add Point</string>
    <string name="fragment_player_action_ACE_BUTTON">ACE</string>
    <string name="fragment_player_action_WINNER_BUTTON">WINNER</string>
    <string name="fragment_player_action_DOUBLE_FAULT_BUTTON">DOUBLE FAULT</string>
    <string name="fragment_player_action_FORCED_ERROR_BUTTON">FORCED ERR.</string>
    <string name="fragment_player_action_UNFORCED_ERROR_BUTTON">UNFORCED ERR.</string>
    <string name="MatchScoreTrackerActivity_MatchCompleted">Match Completed</string>
    <string name="MatchScoreTrackerActivity_BEST_OF_1_SET_TEXTVIEW">Best Of 1 Set</string>
    <string name="MatchScoreTrackerActivity_BEST_OF_3_SETS_TEXTVIEW">Best Of 3 Sets</string>
    <string name="MatchScoreTrackerActivity_BEST_OF_5_SETS_TEXTVIEW">Best Of 5 Sets</string>
    <string name="MatchScoreTrackerActivity_ERROR_BEST_OF_SETS_TEXTVIEW">Error in BestOfSetsTextView</string>
    <string name="content_main_APP_TITLE_TEXTVIEW">Tennis Score Tracker</string>
    <string name="home_NEW_GAME_INFO_TEXTVIEW">Begin a new tennis match.</string>
    <string name="home_PLAYER_RECORDS_INFO_TEXTVIEW">Create a new player, or browse the records of existing players.</string>
</resources>
