<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cool_tenniscourtphoto"
    tools:context=".player_records.PlayerProfileActivity">

    <include
        android:id="@+id/toolbar_player_profile"
        layout="@layout/toolbar_main"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/Layout_BackgroundStyle"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.75"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


    <TextView
        android:id="@+id/player_profile_PLAYER_PROFILE_HEADING_TEXTVIEW"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/player_profile_PLAYER_PROFILE_HEADING_TEXTVIEW"
        style="@style/NonMainActivityTitle_TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/player_profile_PLAYER_NAME_HEADING_TEXTVIEW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/player_profile_PLAYER_NAME_HEADING_TEXTVIEW"
        style="@style/Regular_Heading_TextView"
        app:layout_constraintTop_toBottomOf="@id/player_profile_PLAYER_PROFILE_HEADING_TEXTVIEW"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/player_profile_PLAYER_NAME_DISPLAY_TEXTVIEW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_profile_PLAYER_NAME_DISPLAY_TEXTVIEW"
        style="@style/Regular_Text_TextView"
        app:layout_constraintTop_toBottomOf="@id/player_profile_PLAYER_NAME_HEADING_TEXTVIEW"
        app:layout_constraintStart_toStartOf="@id/player_profile_PLAYER_NAME_HEADING_TEXTVIEW" />

    <TextView
        android:id="@+id/player_profile_PLAYER_WINS_HEADING_TEXTVIEW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/player_profile_PLAYER_WINS_HEADING_TEXTVIEW"
        style="@style/Regular_Heading_TextView"
        app:layout_constraintTop_toBottomOf="@id/player_profile_PLAYER_NAME_DISPLAY_TEXTVIEW"
        app:layout_constraintStart_toStartOf="@id/player_profile_PLAYER_NAME_HEADING_TEXTVIEW" />

    <TextView
        android:id="@+id/player_profile_PLAYER_WINS_DISPLAY_TEXTVIEW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_profile_PLAYER_WINS_DISPLAY_TEXTVIEW"
        style="@style/Regular_Text_TextView"
        app:layout_constraintTop_toBottomOf="@id/player_profile_PLAYER_WINS_HEADING_TEXTVIEW"
        app:layout_constraintStart_toStartOf="@id/player_profile_PLAYER_NAME_HEADING_TEXTVIEW" />

    <TextView
        android:id="@+id/player_profile_PLAYER_LOSSES_HEADING_TEXTVIEW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/player_profile_PLAYER_LOSSES_HEADING_TEXTVIEW"
        style="@style/Regular_Heading_TextView"
        app:layout_constraintTop_toBottomOf="@id/player_profile_PLAYER_WINS_DISPLAY_TEXTVIEW"
        app:layout_constraintStart_toStartOf="@id/player_profile_PLAYER_NAME_HEADING_TEXTVIEW" />

    <TextView
        android:id="@+id/player_profile_PLAYER_LOSSES_DISPLAY_TEXTVIEW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_profile_PLAYER_LOSSES_DISPLAY_TEXTVIEW"
        style="@style/Regular_Text_TextView"
        app:layout_constraintTop_toBottomOf="@id/player_profile_PLAYER_LOSSES_HEADING_TEXTVIEW"
        app:layout_constraintStart_toStartOf="@id/player_profile_PLAYER_NAME_HEADING_TEXTVIEW" />

    <Button
        android:id="@+id/player_profile_CHANGE_PLAYER_NAME_BUTTON"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/player_profile_CHANGE_PLAYER_NAME_BUTTON"
        style="@style/ActivityPlayerProfile_Button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/player_profile_DELETE_PLAYER_BUTTON"
        app:layout_constraintTop_toBottomOf="@id/player_profile_PLAYER_LOSSES_DISPLAY_TEXTVIEW"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/player_profile_DELETE_PLAYER_BUTTON"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        style="@style/ActivityPlayerProfile_Button"
        android:text="@string/player_profile_DELETE_PLAYER_BUTTON"
        app:layout_constraintTop_toBottomOf="@id/player_profile_PLAYER_LOSSES_DISPLAY_TEXTVIEW"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/player_profile_CHANGE_PLAYER_NAME_BUTTON" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>